# AuthService

./: .env.example  .gitignore  Dockerfile.publish  LICENSE  Makefile.build  Makefile.docker  Makefile.release  Makefile.test  Makefile.users  README.md  docker-compose.publish.yml  docker-compose.yml  init-env.sh  run.sh
backend/: Cargo.toml  Dockerfile
backend/migrations/: 0001_init.sql  0002_auth_stats.sql  0003_clients_audit_sessions.sql  0004_totp_email_verification.sql  0005_oauth_hardening.sql  0006_client_mfa.sql  0007_user_registration_source.sql  0008_client_user_membership.sql  0009_embedded_login.sql  0010_embedded_pending_registration.sql  0011_embedded_iframe_v2_theme.sql  0012_refresh_tokens_oauth_client.sql  0013_oauth_client_capabilities.sql  0014_embedded_session_exchange.sql  0015_true_multitenant_email_norm.sql  0016_fks_client_row_sessions.sql  0017_drop_clients_plaintext_secret.sql  0018_embedded_session_default_grant.sql  0019_client_token_ttl.sql
backend/src/: lib.rs  main.rs
backend/src/config/: mod.rs
backend/src/domain/: auth.rs  embedded_ui_theme.rs  mfa_client_policy.rs  mod.rs  rbac.rs  registration_source.rs  user.rs
backend/src/email/: mod.rs  sender.rs
backend/src/http/handlers/: admin.rs  admin_portal.rs  admin_scope.rs  admin_settings.rs  auth.rs  bootstrap.rs  email_verification_http.rs  embedded_login.rs  health.rs  metrics.rs  mod.rs  oauth2.rs  oidc.rs  qr_svg.rs  two_factor.rs
backend/src/middleware/: admin.rs  admin_audience.rs  authz.rs  http_security.rs  mod.rs  rate_limit.rs  settings_access.rs  user.rs
backend/src/oidc/: proxy.rs
backend/src/repositories/: email_verification_repository.rs  user_repository.rs
backend/src/security/: crypto.rs  jwt.rs  mod.rs  password.rs  totp_impl.rs
backend/src/services/: app_state.rs  auth_service.rs  client_oauth.rs  email_verification_service.rs  errors.rs  mod.rs  observability.rs  settings_service.rs  totp_service.rs
backend/tests/: oauth2_tests.rs  security_tests.rs
dashboard-ui/: Dockerfile  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  vitest.config.ts
docs/: EMBEDDED_IFRAME_PROTOCOL.md  PRODUCTION_CHECKLIST.md  SECRETS_AND_KEYS.md
examples/rust/iframe_demo/: .env.example  Cargo.toml  README.md
examples/rust/iframe_demo/src/: error.rs  handlers.rs  lib.rs  settings.rs  store.rs
examples/rust/iframe_demo/static/: embedded-auth-sdk-demo.js
examples/rust/iframe_demo/templates/: index.html  profile.html  register.html
scripts/: 2fa-enroll.sh  2fa-menu.sh  server-check.sh  totp_code.py  user_2fa_enroll.py  user_2fa_enroll_interactive.py
test/: README.md  REPORT.md
(+125 files in other folders)
