[package]
name = "auth_service"
version = "0.1.2"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
config = "0.14"
dotenvy = "0.15"
validator = { version = "0.18", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"
argon2 = "0.5"
rand = "0.8"
base64 = "0.22"
sha2 = "0.10"
subtle = "2.6"
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
url = "2"
urlencoding = "2"
http = "1"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors", "request-id"] }
axum-extra = { version = "0.9", features = ["cookie"] }
prometheus = "0.13"
once_cell = "1"
async-trait = "0.1"
aexmail = { git = "https://github.com/igornet0/AExmail", branch = "main", version = "0.1.0" }
totp-rs = { version = "5", default-features = false, features = ["otpauth", "gen_secret"] }
aes-gcm = { version = "0.10", default-features = false, features = ["aes", "getrandom", "alloc"] }
rsa = { version = "0.9", features = ["pem", "sha2"] }
qrcode = "0.14"
[dev-dependencies]
serial_test = "3"
